--- a/index4.html
+++ b/index4.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-<title>中↔韓 同聲傳譯｜只播譯音（自己不播放）</title>
+<title>中↔韓 同聲傳譯｜只播譯音給他人（自己不播放）</title>
 <style>
   body{font-family:system-ui,-apple-system,"Noto Sans TC","Microsoft JhengHei",Arial;padding:20px;max-width:920px;margin:auto}
   .row{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
@@ -16,14 +16,9 @@
   .hint{color:#666;font-size:13px}
 </style>
 <body>
-  <h2>中↔韓 同聲傳譯（只播放譯音｜自己完全不播放）</h2>
+  <h2>中↔韓 同聲傳譯（只播翻譯給他人｜自己完全不播放）</h2>
 
   <div class="row">
-    <label>Cloudflared 主機（不含 https://）</label>
-    <input id="host" type="text" style="min-width:420px" placeholder="例如 performances-xxxx.trycloudflare.com" />
-  </div>
-
-  <div class="row" style="margin-top:10px">
     <label>名稱</label>
     <input id="name" type="text" value="Public" />
     <label>來源語言</label>
@@ -49,34 +44,16 @@
     <select id="micSel"></select>
     <label for="outSel">輸出裝置（播放他人譯音 MP3）</label>
     <select id="outSel"></select>
-    <span class="hint">伺服器只會傳譯音 MP3；發話者自己不會收到音訊。</span>
+    <span class="hint">伺服器只會傳譯音 MP3；發話者本人不會收到任何音訊。</span>
   </div>
 
   <div class="logs" id="logs"></div>
 
 <script>
-// 讀網址參數 ?host=xxxx.trycloudflare.com
-function getHostFromQuery(){
-  const u = new URL(location.href);
-  return (u.searchParams.get("host") || "").trim();
-}
-function saveHost(h){ try{ localStorage.setItem("cf_host", h||""); }catch(_){ } }
-function loadHost(){ try{ return localStorage.getItem("cf_host")||""; }catch(_){ return ""; } }
+// ★ 固定你的 trycloudflare 主機（不含路徑）：
+const TUNNEL_HOST = "https://performances-swaziland-fortune-brunswick.trycloudflare.com";
 
-// Autoplay 解鎖（避免瀏覽器擋自動播放）
-async function unlockPlayback(){
-  try{
-    const ctx = new (window.AudioContext||window.webkitAudioContext)();
-    const buf = ctx.createBuffer(1, 1, ctx.sampleRate);
-    const src = ctx.createBufferSource();
-    src.buffer = buf; src.connect(ctx.destination); src.start(0);
-    await ctx.resume();
-    setTimeout(()=>{ try{ ctx.close(); }catch(_){ } }, 300);
-    console.log("🔓 Playback unlocked");
-  }catch(e){ console.log("⚠️ unlockPlayback 失敗：", e); }
-}
-
-let ws=null, audioCtx=null, sp=null, stream=null, pingTimer=null, txTimer=null;
+let ws=null, audioCtx=null, worklet=null, sp=null, stream=null, pingTimer=null, txTimer=null;
 let txPkts=0;
 
 let devicesCache=[]; let currentMicId=""; let currentOutId="";
@@ -110,15 +87,16 @@ async function getMicStream(deviceId){
 }
 
 function cleanupAudio(){
+  try{ worklet && worklet.disconnect(); }catch(_){}
   try{ sp && sp.disconnect(); }catch(_){}
   try{ stream && stream.getTracks().forEach(t=>t.stop()); }catch(_){}
   try{ audioCtx && audioCtx.close(); }catch(_){}
   try{ clearInterval(pingTimer); }catch(_){}
   try{ clearInterval(txTimer); }catch(_){}
-  sp=null; audioCtx=null; stream=null; pingTimer=txTimer=null; txPkts=0;
+  worklet=sp=null; audioCtx=null; stream=null; pingTimer=txTimer=null; txPkts=0;
 }
 function leave(){
-  if(ws){ try{ ws.close(); }catch(_){ } }
+  if(ws){ try{ ws.close(); }catch(_){} }
   cleanupAudio();
   $('#join').disabled=false; $('#leave').disabled=true;
   $('#status').textContent="未連線"; $('#status').classList.remove('now');
@@ -152,34 +130,13 @@ async function fallbackScriptProcessor(source){
   log(`✅ ScriptProcessor 已啟用（ctxRate=${audioCtx.sampleRate}Hz）`);
 }
 
-function sniffMime(buf){
-  // 伺服器只送 MP3，但保留 WAV 檢測相容
-  if (buf.byteLength >= 12){
-    const dv = new DataView(buf);
-    const riff = String.fromCharCode(dv.getUint8(0),dv.getUint8(1),dv.getUint8(2),dv.getUint8(3));
-    const wave = String.fromCharCode(dv.getUint8(8),dv.getUint8(9),dv.getUint8(10),dv.getUint8(11));
-    if (riff === 'RIFF' && wave === 'WAVE') return 'audio/wav';
-  }
-  return 'audio/mpeg';
-}
-
 async function join(){
-  // host 來源：URL ?host=、輸入框、或 localStorage
-  let host = getHostFromQuery() || ($('#host').value||"").trim() || loadHost();
-  if(!host){
-    alert("請填入 Cloudflared 主機（例如 performances-xxxx.trycloudflare.com），或在網址後加上 ?host=...");
-    return;
-  }
-  $('#host').value = host; saveHost(host);
-
   try{ await navigator.mediaDevices.getUserMedia({audio:true}); }catch(_){}
   await refreshDevices();
-  await unlockPlayback();
 
   const name = ($('#name').value || 'Guest').trim().slice(0,40);
   const srcLang = $('#srcLang').value;
 
-  const TUNNEL_HOST = "https://" + host;
   ws = new WebSocket(`${TUNNEL_HOST.replace('https://','wss://')}/ws`);
   ws.binaryType = 'arraybuffer';
 
@@ -197,20 +154,66 @@ async function join(){
     audioCtx = new (window.AudioContext||window.webkitAudioContext)({sampleRate:48000});
     await audioCtx.resume().catch(()=>{});
 
-    const source = audioCtx.createMediaStreamSource(stream);
-    await fallbackScriptProcessor(source);
+    try{
+      if (audioCtx.audioWorklet) {
+        const blobURL = URL.createObjectURL(new Blob([`
+          class ResampleWorklet extends AudioWorkletProcessor {
+            constructor(){ super(); this.srcRate=sampleRate; this.dstRate=16000; }
+            process(inputs){
+              const i=inputs[0]; if(!i||!i[0]) return true;
+              const x=i[0]; const ratio=this.srcRate/this.dstRate;
+              const outLen=Math.floor(x.length/ratio);
+              const pcm=new Int16Array(outLen);
+              for(let k=0;k<outLen;k++){
+                const pos=(k*ratio)|0; let s=x[pos];
+                s=Math.max(-1,Math.min(1,s)); pcm[k]=s<0?s*0x8000:s*0x7FFF;
+              }
+              for(let off=0; off<pcm.length; off+=320){
+                const sl=pcm.subarray(off, off+320);
+                if(sl.length===320) this.port.postMessage(sl.buffer,[sl.buffer]);
+              }
+              return true;
+            }
+          }
+          registerProcessor('resample-worklet', ResampleWorklet);
+        `], {type:'application/javascript'}));
+        await audioCtx.audioWorklet.addModule(blobURL);
+
+        const source   = audioCtx.createMediaStreamSource(stream);
+        const zeroGain = audioCtx.createGain(); zeroGain.gain.value = 0;
+        worklet = new AudioWorkletNode(audioCtx, 'resample-worklet');
+
+        let sent=0;
+        worklet.port.onmessage = (e)=>{
+          sent++; txPkts++;
+          if(!$('#mute').checked && ws && ws.readyState===1){
+            ws.send(e.data);
+          }
+        };
+
+        source.connect(worklet); worklet.connect(zeroGain); zeroGain.connect(audioCtx.destination);
+        log(`✅ Worklet 已啟用（ctxRate=${audioCtx.sampleRate}Hz）`);
+
+        setTimeout(()=>{ if(sent===0){ log("⚠️ Worklet 無送包，改 ScriptProcessor"); try{ worklet.disconnect(); }catch(_){ } fallbackScriptProcessor(source); } }, 700);
+      } else {
+        const source = audioCtx.createMediaStreamSource(stream);
+        await fallbackScriptProcessor(source);
+      }
+    }catch(e){
+      const source = audioCtx.createMediaStreamSource(stream);
+      log(`⚠️ Worklet 失敗：${e}`);
+      await fallbackScriptProcessor(source);
+    }
 
     txTimer = setInterval(()=>{ $('#tx').textContent = `TX: ${txPkts} pkt/s`; txPkts=0; }, 1000);
-    $('#join').disabled = true;
-    $('#leave').disabled = false;
+    $('#join').disabled=true; $('#leave').disabled=false;
     pingTimer = setInterval(()=>{ try{ ws.send(JSON.stringify({type:"ping"})); }catch(_){ } }, 20000);
   };
 
   ws.onmessage = async (ev)=>{
     if(ev.data instanceof ArrayBuffer){
-      // 伺服器「只會傳譯音 MP3」，且不會回送給發話者本人
+      // 伺服器只會傳譯音 MP3，而且不會傳給發話者本人
       const buf = ev.data;
-      log(`🔊 收到譯音 MP3，${buf.byteLength} bytes`);
       const mime = sniffMime(buf);
       const blob = new Blob([buf],{type:mime});
       const url  = URL.createObjectURL(blob);
@@ -219,9 +222,8 @@ async function join(){
       if (typeof a.setSinkId === 'function' && $('#outSel').value){
         try { await a.setSinkId($('#outSel').value); } catch(e){ log(`⚠️ 設定輸出失敗：${e}`); }
       }
-      try{ await a.play(); }
-      catch(err){ log(`❌ 瀏覽器阻擋自動播放：${err}。請點一下頁面或允許此網站自動播放。`); }
       a.onended = ()=>{ URL.revokeObjectURL(url); };
+      a.play().catch(err=>{ log(`⚠️ 自動播放被擋：${err}`); });
       return;
     }
     try{
@@ -232,24 +234,30 @@ async function join(){
       if(o.type==="mute")  log(`🔇 ${o.name} ${o.muted?"已靜音":"取消靜音"}`);
       if(o.type==="error") log(`❌ ${o.msg}`);
       if(o.type==="tts_info") log(`ℹ️ ${o.from} TTS bytes=${o.bytes}`);
-      // ❌ 不處理任何 tts_client / speechSynthesis（自己端不朗讀）
+      // ❌ 不處理任何 tts_client（自己端不朗讀）
     }catch(_){}
   };
 
   ws.onclose = ()=>{ log("連線關閉"); leave(); };
 }
 
+function sniffMime(buf){
+  if (buf.byteLength >= 12){
+    const dv = new DataView(buf);
+    const riff = String.fromCharCode(dv.getUint8(0),dv.getUint8(1),dv.getUint8(2),dv.getUint8(3));
+    const wave = String.fromCharCode(dv.getUint8(8),dv.getUint8(9),dv.getUint8(10),dv.getUint8(11));
+    if (riff === 'RIFF' && wave === 'WAVE') return 'audio/wav';
+  }
+  return 'audio/mpeg';
+}
+
 $('#join').onclick = join;
 $('#leave').onclick = leave;
 $('#mute').onchange = ()=>{ if(ws && ws.readyState===1) ws.send(JSON.stringify({type:'mute', value:$('#mute').checked})); };
+
 $('#micSel').onchange = async ()=>{ currentMicId = $('#micSel').value || ""; await refreshDevices(); };
 $('#outSel').onchange = ()=>{ currentOutId = $('#outSel').value || ""; };
 
-(function boot(){
-  // 預填 host：先讀 ?host=，沒有就用 localStorage
-  const hq = getHostFromQuery() || loadHost();
-  if(hq) $('#host').value = hq;
-})();
 navigator.mediaDevices.addEventListener('devicechange', refreshDevices);
 (async ()=>{ try{ await navigator.mediaDevices.getUserMedia({audio:true}); }catch(_){ } await refreshDevices(); })();
 </script>
